<resources>
    <string name="app_name">Hotspot 2.0 AP Finder</string>
    <string name="ssid_filter">Enter SSID here</string>
    <string name="button_scan">Scan</string>
    <string name="ap_count_title">Total Hotspot 2.0 AP Count: </string>
    <string name="ap_count">0 </string>
    <string name="ap_ssid">
        "    SSID:"
    </string>
    <string name="internetworking_ie_acess_net_title">
        "    Access Network Type:"
    </string>
    <string name="internetworking_ie_internet_title">
        "    Internet Connectivity:"
    </string>
    <string name="internetworking_ie_venue_group_title">
        "    Venue Group:"
    </string>
    <string name="internetworking_ie_venue_type_title">
        "    Venue Type:"
    </string>
    <string name="internetworking_ie_hessid_title">
        "    HESSID:"
    </string>
    <string name="hotspot20_ie_active_title">
        "    Hotspot 2.0 IE present:"
    </string>
    <string name="hotspot20_ie_release_number">
        "    Hotspot 2.0 Release:"
    </string>
</resources>
